--- a/templates/painel-hiperdia-has.html
+++ b/templates/painel-hiperdia-has.html
@@ -151,7 +151,7 @@
         </div>
         <div class="bg-white rounded shadow-sm p-6 mb-6">
             <div class="flex justify-between items-center mb-6">
-                <h2 id="hiperdiaTimelineTitle" class="text-xl font-semibold text-gray-800">Linha do Tempo de Acompanhamento</h2>
+                <h2 id="hiperdiaTimelineTitle" class="text-xl font-semibold text-gray-800">Lista de Pacientes Hipertensos</h2>
                 <div class="relative">
                     <div class="flex items-center border border-gray-300 rounded-full px-3 py-1">
                         <div class="w-4 h-4 flex items-center justify-center text-gray-500 mr-2">
